--- a/Progress Step/index.html
+++ b/Progress Step/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">1</div>
   </body>
   <script src="script.js"></script>
 </html>
